# postal_code_json

./: .gitignore  Dockerfile  NOTICE  README.md  pyproject.toml
scrape/: scrapy.cfg
scrape/scrape_postal_code/: __init__.py  items.py  middlewares.py  pipelines.py  settings.py
scrape/scrape_postal_code/spiders/: __init__.py  postal_code_spider.py
test/: test_extract.py  test_parse.py
